ADDED API for USERS and Vehicule +deleted logo and some Folders we dont need

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,8 @@ body {
     text-wrap: balance;
   }
 }
+.users-table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: aqua;
+}
