--- a/pages/components/forms/styles.module.css
+++ b/pages/components/forms/styles.module.css
@@ -1,8 +1,6 @@
 .userstable {
   width: 95%;
   border-collapse: collapse;
-  color: black;
-  background-color: aliceblue;
   border-radius: 10px;
   margin: 20px;
 }
@@ -10,4 +8,56 @@
 .th1 {
   border: 2px solid black;
   padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+
+.tr1:hover {
+  background-color: #f5f5f5;
+  
+}
+
+.modifyButton {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.deleteButton {
+  background-color: #f44336; /* Red */
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.container {
+  padding: 20px;
+}
+.addButton {
+  background-color: #008CBA; /* Blue */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  border-radius: 4px;
 }
