--- a/pages/components/forms/styles.module.css
+++ b/pages/components/forms/styles.module.css
@@ -9,12 +9,12 @@
   border: 2px solid black;
   padding: 10px;
   text-align: left;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid black ;
 }
 
 
 .tr1:hover {
-  background-color: #f5f5f5;
+  background-color: #f5f5f51e;
   
 }
 
@@ -31,6 +31,10 @@
   cursor: pointer;
   border-radius: 4px;
 }
+.modifyButton:hover {
+  background-color: #4caf4f19;
+}
+
 
 .deleteButton {
   background-color: #f44336; /* Red */
@@ -45,6 +49,10 @@
   cursor: pointer;
   border-radius: 4px;
 }
+.modifyButton:hover {
+  background-color: #007bb5;
+}
+
 .container {
   padding: 20px;
 }
@@ -60,4 +68,91 @@
   margin-bottom: 20px;
   cursor: pointer;
   border-radius: 4px;
+}
+.addButton:hover {
+  background-color: #7fbbcf1b;
+}
+.confirmation-dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.confirmation-dialog-message {
+  margin-bottom: 20px;
+}
+
+.confirmation-dialog-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.confirmation-dialog-buttons button {
+  margin: 0 10px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.confirmation-dialog-buttons button.cancel {
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+.confirmation-dialog-buttons button.confirm {
+  background-color: #ff5252;
+  color: white;
+}
+.userstable th, .userstable td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+.formContainer {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.formGroup {
+  margin-bottom: 15px;
+}
+
+.formGroup label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.formGroup input, .formGroup select, .formGroup textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.formGroup input[type="file"] {
+  padding: 3px;
+}
+
+.submitButton {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.submitButton:hover {
+  background-color: #45a049;
 }
