--- a/pages/components/forms/styles.module.css
+++ b/pages/components/forms/styles.module.css
@@ -1,13 +1,14 @@
 
-.userstable {
+/* .userstable {
   width: 95%;
   border-collapse: collapse;
-  border-radius: 10px;
+  border-radius: 20px;
   margin: 20px;
-}
-
+} */
+/* background-color:rgba(17, 22, 51, 0.95) */
 .th1 {
   border: 2px solid black;
+  background-color: #071042f2;
   padding: 10px;
   text-align: left;
   border-bottom: 1px solid #ddd;
@@ -15,9 +16,10 @@
 
 
 .tr1:hover {
-  background-color:  #f5f5f522;
-  
+  background-color:  #78787833;  
 }
+
+
 
 .modifyButton {
   background-color: #4CAF50; /* Green */
@@ -73,17 +75,19 @@
 .userstable {
   width: 100%;
   border-collapse: collapse;
+  border-radius: 50px; 
   margin-top: 20px;
 }
 
 .userstable th, .userstable td {
+  color: white;
   border: 1px solid #ddd;
   padding: 12px 15px;
   text-align: left;
 }
 
 .userstable th {
-  background-color: #4b4b4b;
+  background-color: #0b0f2cf2;
 }
 
 .userstable tr:nth-child(even) {
@@ -91,7 +95,7 @@
 }
 
 .userstable tr:hover {
-  background-color: #1d26337c;
+  background-color: #5d5d5d32;
 }
 
 .modifyButton, .deleteButton {
